--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,11 +1,110 @@
 version: '2'
+
 services:
 
+  zammad-backup:
+    command: ["zammad-backup"]
+    depends_on:
+      - zammad-railsserver
+    entrypoint: /usr/local/bin/backup.sh
+    image: ${IMAGE_REPO}:zammad-postgresql${VERSION}
+    links:
+      - zammad-postgresql
+    restart: always
+    volumes:
+      - /srv/data/wegi/zammad/zammad-backup:/var/tmp/zammad
+      - /srv/data/wegi/zammad/zammad-data:/opt/zammad
+
+  zammad-elasticsearch:
+    image: ${IMAGE_REPO}:zammad-elasticsearch${VERSION}
+    restart: always
+    volumes:
+      - /srv/data/wegi/zammad/elasticsearch-data:/usr/share/elasticsearch/data
+
+  zammad-init:
+    command: ["zammad-init"]
+    depends_on:
+      - zammad-postgresql
+    image: ${IMAGE_REPO}:zammad${VERSION}
+    links:
+      - zammad-elasticsearch
+      - zammad-postgresql
+    restart: on-failure
+    volumes:
+      - /srv/data/wegi/zammad/zammad-data:/opt/zammad
+
+  zammad-memcached:
+    command: ["zammad-memcached"]
+    image: ${IMAGE_REPO}:zammad-memcached${VERSION}
+    restart: always
+
   zammad-nginx:
-    environment:
-        - 'VIRTUAL_HOST=helpdesk.mainwebsolutions.de'
-        - 'VIRTUAL_PORT=7990'
-        - 'LETSENCRYPT_HOST=helpdesk.mainwebsolutions.de'
-        - 'LETSENCRYPT_EMAIL=info@mainwebsolutions.de'
-    networks:
-        - default
+    command: ["zammad-nginx"]
+    depends_on:
+      - zammad-railsserver
+    image: ${IMAGE_REPO}:zammad${VERSION}
+    links:
+      - zammad-railsserver
+      - zammad-websocket
+    restart: always
+    volumes:
+      - /srv/data/wegi/zammad/zammad-data:/opt/zammad
+    expose:
+      - "80"
+
+  zammad-postgresql:
+    image: ${IMAGE_REPO}:zammad-postgresql${VERSION}
+    restart: always
+    volumes:
+      - /srv/data/wegi/zammad/postgresql-data:/var/lib/postgresql/data
+
+  zammad-railsserver:
+    command: ["zammad-railsserver"]
+    depends_on:
+      - zammad-memcached
+      - zammad-postgresql
+    image: ${IMAGE_REPO}:zammad${VERSION}
+    links:
+      - zammad-elasticsearch
+      - zammad-memcached
+      - zammad-postgresql
+    restart: always
+    volumes:
+      - /srv/data/wegi/zammad/zammad-data:/opt/zammad
+
+  zammad-scheduler:
+    command: ["zammad-scheduler"]
+    depends_on:
+      - zammad-memcached
+      - zammad-railsserver
+    image: ${IMAGE_REPO}:zammad${VERSION}
+    links:
+      - zammad-elasticsearch
+      - zammad-memcached
+      - zammad-postgresql
+    restart: always
+    volumes:
+      - /srv/data/wegi/zammad/zammad-data:/opt/zammad
+
+  zammad-websocket:
+    command: ["zammad-websocket"]
+    depends_on:
+      - zammad-memcached
+      - zammad-railsserver
+    image: ${IMAGE_REPO}:zammad${VERSION}
+    links:
+      - zammad-postgresql
+      - zammad-memcached
+    restart: always
+    volumes:
+      - /srv/data/wegi/zammad/zammad-data:/opt/zammad
+
+volumes:
+  elasticsearch-data:
+    driver: local
+  postgresql-data:
+    driver: local
+  zammad-backup:
+    driver: local
+  zammad-data:
+    driver: local
