--- a/docker-compose.addition.prod.yml
+++ b/docker-compose.addition.prod.yml
@@ -3,9 +3,9 @@ services:
 
   zammad-nginx:
     environment:
-        - 'VIRTUAL_HOST=helpdesk.mainwebsolutions.de'
+        - 'VIRTUAL_HOST=helpdesk.wegi-gmbh.de'
         - 'VIRTUAL_PORT=80'
-        - 'LETSENCRYPT_HOST=helpdesk.mainwebsolutions.de'
+        - 'LETSENCRYPT_HOST=helpdesk.wegi-gmbh.de'
         - 'LETSENCRYPT_EMAIL=info@mainwebsolutions.de'
     networks:
         - default
