--- a/docker-compose.addition.prod.yml
+++ b/docker-compose.addition.prod.yml
@@ -3,4 +3,4 @@ zammad-nginx:
       - 'VIRTUAL_HOST=helpdesk.wegi-gmbh.de'
       - 'VIRTUAL_PORT=80'
       - 'LETSENCRYPT_HOST=helpdesk.wegi-gmbh.de'
-      - 'LETSENCRYPT_EMAIL=info@mainwebsolutions.de'
+      - 'LETSENCRYPT_EMAIL=system@wegi-gmbh.de'
