--- a/docker-compose.addition.prod.yml
+++ b/docker-compose.addition.prod.yml
@@ -2,5 +2,6 @@ zammad-nginx:
   environment:
     - 'VIRTUAL_HOST=helpdesk.wegi-gmbh.de'
     - 'VIRTUAL_PORT=80'
+    - 'NGINX_SERVER_SCHEME=https'
     - 'LETSENCRYPT_HOST=helpdesk.wegi-gmbh.de'
     - 'LETSENCRYPT_EMAIL=system@wegi-gmbh.de'
