set ELASTICSEARCH_REINDEX to true

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ RESTART=always
 VOLUME_BASE_PATH=/srv/data/zammad
 # don't forget to add the minus before the version
 VERSION=-5.2.3-32
+ELASTICSEARCH_REINDEX=true
